azurermps/1.7.0/AzureRM.KeyVault/AzureRM.KeyVault.md
---
Module Name: AzureRM.KeyVault
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 2.0.0.1
Locale: en-US
ms.assetid: 01D2E8BE-C0AC-47D5-AE01-72F365AE29E9
updated_at: 11/11/2016 23:11 PM
ms.date: 11/11/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.KeyVault/v1.1.11/AzureRM.KeyVault.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.KeyVault/v1.1.11/AzureRM.KeyVault.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/79eeb985ea480979357fb4695832a0c3d29a48bf
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: false
Add-AzureKeyVaultCertificate: Key Vault
Add-AzureKeyVaultCertificateContact: Key Vault
Add-AzureKeyVaultKey: Key Vault
Backup-AzureKeyVaultKey: Key Vault
Get-AzureKeyVaultCertificate: Key Vault
Get-AzureKeyVaultCertificateContact: Key Vault
Get-AzureKeyVaultCertificateIssuer: Key Vault
Get-AzureKeyVaultCertificateOperation: Key Vault
Get-AzureKeyVaultCertificatePolicy: Key Vault
Get-AzureKeyVaultKey: Key Vault
Get-AzureKeyVaultSecret: Key Vault
Get-AzureRmKeyVault: Key Vault
Import-AzureKeyVaultCertificate: Key Vault
New-AzureKeyVaultCertificateAdministratorDetails: Key Vault
New-AzureKeyVaultCertificateOrganizationDetails: Key Vault
New-AzureKeyVaultCertificatePolicy: Key Vault
New-AzureRmKeyVault: Key Vault
Remove-AzureKeyVaultCertificate: Key Vault
Remove-AzureKeyVaultCertificateContact: Key Vault
Remove-AzureKeyVaultCertificateIssuer: Key Vault
Remove-AzureKeyVaultCertificateOperation: Key Vault
Remove-AzureKeyVaultKey: Key Vault
Remove-AzureKeyVaultSecret: Key Vault
Remove-AzureRmKeyVault: Key Vault
Remove-AzureRmKeyVaultAccessPolicy: Key Vault
Restore-AzureKeyVaultKey: Key Vault
Set-AzureKeyVaultCertificateAttribute: Key Vault
Set-AzureKeyVaultCertificateIssuer: Key Vault
Set-AzureKeyVaultCertificatePolicy: Key Vault
Set-AzureKeyVaultKeyAttribute: Key Vault
Set-AzureKeyVaultSecret: Key Vault
Set-AzureKeyVaultSecretAttribute: Key Vault
Set-AzureRmKeyVaultAccessPolicy: Key Vault
Stop-AzureKeyVaultCertificateOperation: Key Vault
_isModulePage: true
---

# AzureRM.KeyVault Module
## Description
This topic displays help topics for the Azure Key Vault Cmdlets. 

## AzureRM.KeyVault Cmdlets
### [Add-AzureKeyVaultKey](./Add-AzureKeyVaultKey.md)
Creates a key in a key vault or imports a key into a key vault.


### [Backup-AzureKeyVaultKey](./Backup-AzureKeyVaultKey.md)
Backs up a key in a key vault.

### [Get-AzureKeyVaultKey](./Get-AzureKeyVaultKey.md)
Gets Key Vault keys.


### [Get-AzureKeyVaultSecret](./Get-AzureKeyVaultSecret.md)
Gets the secrets in a key vault.


### [Get-AzureRmKeyVault](./Get-AzureRmKeyVault.md)
Gets key vaults.

### [New-AzureRmKeyVault](./New-AzureRmKeyVault.md)
Creates a key vault.

### [Remove-AzureKeyVaultKey](./Remove-AzureKeyVaultKey.md)
Deletes a key in a key vault.


### [Remove-AzureKeyVaultSecret](./Remove-AzureKeyVaultSecret.md)
Deletes a secret in a key vault.


### [Remove-AzureRmKeyVaultAccessPolicy](./Remove-AzureRmKeyVaultAccessPolicy.md)
Removes all permissions for a user or application from a key vault.


### [Remove-AzureRmKeyVault](./Remove-AzureRmKeyVault.md)
Deletes a key vault.


### [Restore-AzureKeyVaultKey](./Restore-AzureKeyVaultKey.md)
Creates a key in a key vault from a backed-up key.

### [Set-AzureKeyVaultKeyAttribute](./Set-AzureKeyVaultKeyAttribute.md)
Updates the attributes of a key in a key vault.


### [Set-AzureKeyVaultSecretAttribute](./Set-AzureKeyVaultSecretAttribute.md)
Updates attributes of a secret in a key vault.


### [Set-AzureKeyVaultSecret](./Set-AzureKeyVaultSecret.md)
Creates or updates a secret in a key vault.


### [Set-AzureRmKeyVaultAccessPolicy](./Set-AzureRmKeyVaultAccessPolicy.md)
Grants or modifies existing permissions for a user, application, or security group to perform operations with a key vault.



